# source2doc

./: .env.example  .gitignore  README.md  bootstrap.sh  config.ui example.yaml  config.ui.example.yaml  docker-compose.yml  find-podman-socket.sh  generate-admin-password.sh  generate-encryption-key.sh  run-migrations.sh
core/gateway/: .env.example  config.docker.host.yaml  config.docker.yaml  config.docker.yaml.example  config.yaml.example  pyproject.toml
core/gateway/app/: app.py  cli.py  config.py  errors.py  lifespan.py
core/gateway/app/routes/: health.py
core/gateway/app/security/: admin.py
core/gateway/tests/: conftest.py
core/gateway/tests/e2e/: conftest.py  test_repos_storage.py  test_s3_repos_upload.py  test_storage_round_trip.py  test_tasks_pipeline.py
core/gateway/tests/perf/: README.md  _helpers.py  conftest.py  test_sse_push_latency.py  test_status_latency.py
core/gateway/tests/routes/: test_admin_health.py  test_admin_trace.py  test_agent_runs.py  test_bundles.py  test_codetours.py  test_docs.py  test_generations.py  test_health.py  test_logs.py  test_metrics_aggregate.py  test_repos.py  test_resume.py  test_retry.py  test_search.py  test_sse_helpers.py  test_streams.py  test_tasks.py  test_wiki.py
core/mvp/: .gitignore  README.md  docker-compose.yaml  documentation.json  main.py  pyproject.toml
core/mvp/configs/: config.yaml.example  qdrant.yaml
core/mvp/configs/agents/: critic.yaml  diagrammer.yaml  normalizer.yaml  planner.yaml  subplanner.yaml  writer.yaml
core/mvp/db/: init.sql
core/mvp/docgen_core/: cli.py  observability.py
core/mvp/docgen_core/agents/: critic.py  deps.py  diagrammer.py  language_directive.py  normalizer.py  planner.py  subplanner.py  writer.py
core/mvp/docgen_core/config/: agents.py  loader.py
core/mvp/docgen_core/output/: __init__.py  storage_writer.py  writer.py
core/mvp/docgen_core/pipeline/: incremental.py  incremental_docs.py  index.py  ingest.py
core/mvp/docgen_core/services/: embeddings.py  llm.py  yandex_transport.py
core/mvp/docgen_core/tools/: files.py  search.py
core/mvp/docgen_core/workers/: __init__.py  context.py  env.py  metrics.py  resilience.py  runner.py
core/mvp/tests/agents/: test_runner_via_test_model.py  test_subplanner.py
core/mvp/tests/pipeline/: test_incremental.py  test_incremental_docs.py
core/mvp/tests/workers/: test_metrics.py  test_resilience.py  test_timeout_event.py
core/shared/: pyproject.toml
core/shared/source2doc/: __init__.py  config.py  errors.py  git_context.py  health.py  llm_providers.py  llm_retry.py  loader.py  logging.py  mermaid.py  yandex_transport.py
core/shared/source2doc/agents/: config.py  history.py  runner.py  session_lock.py
core/shared/source2doc/events/: __init__.py  bus.py  redis_bus.py
core/shared/source2doc/formatter/: base.py
core/shared/source2doc/models/: __init__.py  chunks.py  docs.py  mermaid_kinds.py  review.py
core/shared/source2doc/normalizer/: __init__.py  blocks.py
core/shared/source2doc/pipelines/: __init__.py  codetour.py  docgen.py  prdoc.py  registry.py  types.py
core/shared/source2doc/resilience/: __init__.py  external.py
core/shared/source2doc/security/: encryption.py
core/shared/source2doc/storage/: __init__.py  admin_sessions.py  base.py  codetour.py  filesystem.py  postgres.py  prdoc.py  presets.py  s3.py
core/shared/source2doc/tools/: files.py  git.py  search.py
core/shared/tests/: test_git_context.py  test_llm_providers.py  test_llm_retry.py  test_page_links.py  test_page_versions.py  test_resilience_external.py
core/shared/tests/agents/: test_runner_persistence.py
core/shared/tests/formatter/: test_mdx_blocks.py  test_rst_blocks.py
core/shared/tests/normalizer/: test_blocks.py
core/shared/tests/pipelines/: test_docgen_pipeline.py
core/shared/tests/resilience/: test_external.py
core/shared/tests/security/: test_encryption.py
core/shared/tests/storage/: test_record_agent_run.py
core/worker/: .env.example  config.docker.codetour.yaml  config.docker.docgen.yaml  config.docker.yaml  config.docker.yaml.example  config.example.yaml  pyproject.toml
core/worker/tests/: test_health.py  test_pricing.py
core/worker/tests/bundler/: test_collect_pages.py  test_formatters.py  (+3 more)
core/worker/worker/: cli.py  config.py  encryption.py  health.py  lifecycle.py
(+441 files in other folders)
