[project]
name = "source2doc-mvp"
version = "0.1.0"
description = "Documentation generation with pydantic-ai agents"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # `pydantic-ai-slim` instead of `pydantic-ai` keeps us off bedrock's
    # boto3 pin which collides with our aioboto3>=13. >=1.87 is required
    # for anthropic 0.97 compatibility (older anthropic types renamed).
    "pydantic-ai-slim[openai,anthropic]>=1.87.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "qdrant-client>=1.7.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "redis[hiredis]>=5.0.0",
    "structlog>=24.1.0",
    "logfire>=4.25.0",
    "tenacity>=8.0.0",
    "jinja2>=3.0.0",
    "source2doc-shared",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
docgen = "docgen_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docgen_core"]

[tool.uv.sources]
source2doc-shared = { workspace = true }
