[project]
name = "source2doc-shared"
version = "0.1.0"
description = "Shared components for source2doc infrastructure"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis[hiredis]>=5.0.0",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "fastapi>=0.115.0",
    "asyncpg>=0.29.0",
    "aioboto3>=13.0.0",
    "botocore>=1.34.0",
    "pathspec>=0.12.0",
    "cryptography>=41.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "pydantic-ai-slim[anthropic,openai]>=1.87.0",
    "anthropic>=0.95.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source2doc"]
