[project]
name = "source2doc-worker"
version = "0.1.0"
description = "Worker for source2doc infrastructure with user config support"
requires-python = ">=3.12"
dependencies = [
    "redis[hiredis]>=5.0.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9.0",
    "structlog>=23.0.0",
    "source2doc-shared",
    "source2doc-mvp",
    "source2doc-codetour",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis[aioredis]>=2.20",
]

[project.scripts]
worker = "worker.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.uv.sources]
source2doc-shared = { workspace = true }
source2doc-mvp = { workspace = true }
source2doc-codetour = { workspace = true }
